# DigitalTextConverter

./: .gitignore  CMakeLists.txt  PROPOSAL.md  README.md
apps/: cinder_app_main.cc  input_image_main.cc
include/cli/: command_line_input_parser.h
include/core/: image_processor.h  text_converter.h
include/visualizer/: ocr_app.h  sketchpad.h  text_box_component.h
src/cli/: command_line_input_parser.cc
src/core/: image_processor.cc  text_converter.cc
src/visualizer/: ocr_app.cc  sketchpad.cc  text_box_component.cc
tests/: sketchpad_tests.cc  text_box_component_tests.cc
